--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261568764659289%22%3A%22vG2iUx6a%22%7D",
+        "value": "%7B%2261568764659289%22%3A%22vG2iUx6a%22%2C%2261570034168492%22%3A%224WRXUyHh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.115Z",
+        "lastAccessed": "2024-12-11T14:14:06.115Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.115Z",
+        "lastAccessed": "2024-12-11T14:14:06.115Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.115Z",
+        "lastAccessed": "2024-12-11T14:14:06.115Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.115Z",
+        "lastAccessed": "2024-12-11T14:14:06.115Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
     },
     {
         "key": "ps_n",
@@ -50,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61568764659289",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
-    },
-    {
-        "key": "fr",
-        "value": "0KranOlj5vm81f2kq.AWULihmz9kSNDjnnTkXJk_eDS24.BnPGY9..AAA.0.0.BnP0Dy.AWXr2_vfXfI",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
-    },
-    {
-        "key": "xs",
-        "value": "34%3AzO4Q7zEyxdoB9w%3A2%3A1732198643%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
     },
     {
         "key": "locale",
@@ -86,25 +59,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
+    },
+    {
+        "key": "wd",
+        "value": "424x839",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61570034168492",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
+    },
+    {
+        "key": "fr",
+        "value": "0KranOlj5vm81f2kq.AWW4S9t0wLEitg4QPqKMDhvgPKE.BnPGY9..AAA.0.0.BnWZrr.AWWMa7mwW4I",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
+    },
+    {
+        "key": "xs",
+        "value": "48%3AeY5NuLinZFw0iA%3A2%3A1733925622%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
     },
     {
         "key": "fbl_st",
-        "value": "101326136%3BT%3A28898367",
+        "value": "101325307%3BT%3A28898774",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2693%3Btimestamp%3A1733902036",
+        "value": "v2%3Bclient_version%3A2693%3Btimestamp%3A1733926439",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-12-11T08:00:39.054Z",
-        "lastAccessed": "2024-12-11T08:00:39.054Z"
+        "creation": "2024-12-11T14:14:06.116Z",
+        "lastAccessed": "2024-12-11T14:14:06.116Z"
     }
 ]
